# dtactions

./: .gitignore  .gitmodules  README.md  build_package.ps1  building_and_publishing_packages.txt  messagefunctions.py  publish_package_pypi.cmd  publish_package_pypi.ps1  pyproject.toml  scintillacon.py  sendkeys.py
.github/workflows/: python-publish.yml
documentation/: conf.py  documentation.rst  index.rst  messagefunctions.rst  messagesfunctions.rst  modules.rst  monitorfunctions.rst  natlinkclipboard.rst  sendkeys.rst
natlink_test/requires_natlink/: test_actions.py  unittestClipboard.py  unittestMessagefunctions.py
src/dtactions/: ExtendedSendDragonKeys.py  README.md  SendInput.py  __init__.py  ahk_actions.py  autohotkeyactions.py  inivars.py  messagefunctions.py  monitorfunctions.py  natlinkclipboard.py  sendkeys.py  testactions.py  unimacroactions.py  unimacroutils.py  utilsqh.py
src/dtactions/samples/: unimacroactions.ini
src/dtactions/samples/autohotkey/: getintoforeground.ahk  showmessageswindow.ahk
src/dtactions/samples/unimacro/: unimacroactions.ini
src/dtactions/unimacro/: actions.py  classbasedactions_later.py  extenvvars.py  inivars.py  newactions.py  unimacroactions.py  unimacroutils.py  usc_functions.py  utilsqh.py
src/dtactions/unimacro/actionclasses/: actionbases.py  code-actions.py  excel-actions.py  frescobaldi-actions.py  komodo-actions.py  notreadykomodo-actions.py  pythonwin-actions.py  uedit32-actions.py  uedit64-actions.py  win32pad-actions.py
src/dtactions/unimacroactionclasses/: actionbases.py  code-actions.py  excel-actions.py  frescobaldi-actions.py  komodo-actions.py  uedit64-actions.py  win32pad-actions.py
src/dtactions/unimacroobsolete/: getdict.ini  newactions.py  set.ini  simple.ini  unimacroutils.py
src/dtactions/unittest/: test_actions.py  unittestActions.py  unittestAutohotkeyactions.py  unittestClipboard.py
src/dtactions/unittest/test_inivarsfiles/: _brackets.ini
src/dtactions/vocola_compatibility/: README.txt  Unimacro.vch
src/dtactions/vocola_sendkeys/: ExtendedSendDragonKeys.py  ext_keys.py
test/: test_extenvvars.py  test_inivars.py  test_unimacroactions.py  test_unimacroutils.py
tests/: conftest.py  init_test.py  test_appbringup.py  test_dtactions_base.py  test_extenvvars.py  test_inivars.py  test_unimacroactions.py  test_unimacroutils.py  unittestAutohotkeyactions.py
tests/test_files/: ide test python.py  ide test txt.txt  test excel 1.xlsx  test excel 2.xlsx  test word 1.docx  test word 2.docx
unittest/: unittestClipboard.py  unittestMessagefunctions.py
