[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module="dtactions"
author = "LexiconCode"
author-email = "CasterVoice@protonmail.com"
maintainer = "Quintijn Hoogenboom"
maintainer-email = "q.hoogenboom@antenna.nl"
home-page = "https://qh.antenna.nl/unimacro/"
description-file = "README.md"

requires=[ 
	"pywin32 >= 300",
	"natlinkcore",
	"debugpy",
	"dragonfly2"]  
		
classifiers=[	"Development Status :: 4 - Beta",
				"Topic :: Multimedia :: Sound/Audio :: Speech",
				"Topic :: Scientific/Engineering :: Human Machine Interfaces",
				]
				
requires-python = ">=3.8"
dist-name="dtactions"
keywords="dragon,speech,dictation,dictation-toolbox,unimacro,natlink,dtactions,dragonfly2"

[tool.flit.scripts]

