[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dtactions"
authors = [{name = "LexiconCode", email = "CasterVoice@protonmail.com"}]
maintainers  = [{name = "Quintijn Hoogenboom", email="q.hoogenboom@antenna.nl"}, {name = "LexiconCode", email = "CasterVoice@protonmail.com"}]
dynamic = ["version", "description"]
requires-python = ">=3.9"
readme = "README.md"

dependencies= [
	"pywin32 >= 300",
	"debugpy",
	"dragonfly2"
]

classifiers=[	"Development Status :: 4 - Beta",
				"Topic :: Multimedia :: Sound/Audio :: Speech",
				"Topic :: Scientific/Engineering :: Human Machine Interfaces",
				]

home-page = "https://github.com/dictation-toolbox/dtactions"


repository = "https://github.com/dictation-toolbox/dtactions"

keywords=["dragon","speech","dictation","dictation-toolbox","natlink"]

[project.optional-dependencies]
test = [
    "pytest >=7.1.2",
	"natlink"
]

[project.scripts]

[tool.pytest.ini_options]
minversion = "7.1.2"
addopts = "--capture=tee-sys "
# very important
#the pythonpath lets pytest load code in your source area
#in addition to that in site-packages etc.
#you may want to run your tests without install natlinkcore with flit or pip
pythonpath = [
    "src",
    "src/dtactions",
]
testpaths= [
    "test",
]
python_files = [
			"unittest*.py",
			"test_*.py",
	]

