[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dtactions"
authors = [{name = "Quintijn Hoogenboom", email="q.hoogenboom@antenna.nl"}]
maintainers  = [{name = "Quintijn Hoogenboom", email="q.hoogenboom@antenna.nl"}, {name = "LexiconCode", email = "CasterVoice@protonmail.com"}]
dynamic = ["description"]
requires-python = ">=3.9"
readme = "README.md"
version="1.6.4.dev2"
dependencies= [
	"pywin32 >= 300",
	"debugpy",
	"platformdirs"
]

classifiers=[	"Development Status :: 4 - Beta",
				"Topic :: Multimedia :: Sound/Audio :: Speech",
				"Topic :: Scientific/Engineering :: Human Machine Interfaces",
				]



####repository = "https://github.com/dictation-toolbox/dtactions"

keywords=["dragon","speech","dictation","dictation-toolbox","natlink"]

[project.optional-dependencies]

test = [
    "pytest >=7.1.2",
]


dev = [
	"pyenvutils",
	"build"
]

[project.scripts]



[project.urls]
Home = "https://github.com/dictation-toolbox/dtactions"

Readthedocs = "https://dtactions.readthedocs.io/en/latest/sendkeys.html"


[tool.pytest.ini_options]
minversion = "7.1.2"
addopts = "--capture=tee-sys "
# very important
#the pythonpath lets pytest load code in your source area
#in addition to that in site-packages etc.
#you may want to run your tests without install natlinkcore with flit or pip
pythonpath = [
    "src",
    "src/dtactions",
]
testpaths= [
    "tests",
]
python_files = [
			"unittest*.py",
			"test_*.py",
	]
 

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py","tests/**/*.py"]

[tool.pyright]
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py","tests/**/*.py"]
